20170307
--------
-Added - #30738 - Add support for Parquet files

20170214
--------
- #31223 - Specify custom core-site.xml and/or hdfs-site.xml in the wrapper view configuration.

20170111
--------
- #28380 - Apply fixes on Kerberos authentication mechanism.
- #28381 - Update Hadoop client libraries.

20160121
-------
- #24093 - Add support for delimited files.

20151118
--------
- #24247 - Add STOP capabilites to the HDFSFileWrapper.
- #24285 - WebHDFSFileWrapper should handle key/value pairs as HDFSDelimitedTextFileWrapper
- #24284 - Update to Hadoop 2.6.0 and Avro 1.7.7

20140808
--------
- #15683 - Add authentication artifacts for kerberized Hadoop clusters.
- #15709 - Update version of Hadoop client libraries (v2.4.0)