@@ -22,7 +22,11 @@
 package com.denodo.connect.hadoop.hdfs.reader;
 
 import java.io.IOException;
+import java.math.BigDecimal;
+import java.math.BigInteger;
+import java.util.Date;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
@@ -48,29 +52,29 @@ public class HDFSParquetFileReader extends AbstractHDFSFileReader {
     private List<CustomWrapperFieldExpression> projectedFields;
     private static final Logger logger = Logger.getLogger(HDFSParquetFileReader.class);
 
-    public HDFSParquetFileReader(Configuration conf, Path path, 
-            String user, List<CustomWrapperFieldExpression> projectedFields) throws IOException, InterruptedException {
+    public HDFSParquetFileReader(final Configuration conf, final Path path, 
+            final String user, final List<CustomWrapperFieldExpression> projectedFields) throws IOException, InterruptedException {
 
         super(conf, path, user);
         this.projectedFields = projectedFields;
     }
 
     @Override
-    public void openReader(FileSystem fileSystem, Path path,
-            Configuration configuration) throws IOException {
-        GroupReadSupport groupReadSupport=new GroupReadSupport();
+    public void openReader(final FileSystem fileSystem, final Path path,
+            final Configuration configuration) throws IOException {
+        final GroupReadSupport groupReadSupport=new GroupReadSupport();
         this.dataFileReader=ParquetReader.builder(groupReadSupport,path).withConf(configuration).build();
         if(this.dataFileReader==null){
             throw new IllegalArgumentException("'" + path + "' is not a parquet file, or there is other problem in the connection"); 
         }
     }
 
-    public   SchemaElement getSchema(FileSystem fileSystem, Path path,
-            Configuration configuration) throws IOException, CustomWrapperException  {
+    public   SchemaElement getSchema(final FileSystem fileSystem, final Path path,
+            final Configuration configuration) throws IOException, CustomWrapperException  {
 
         openReader(fileSystem, path, configuration);
-        Group group =  this.dataFileReader.read();
-        SchemaElement schemaElement = ParquetSchemaUtils.buildSchema(group, group.getType().getName());
+        final Group group =  this.dataFileReader.read();
+        final SchemaElement schemaElement = ParquetSchemaUtils.buildSchema(group, group.getType().getName());
         closeReader();
 
         return schemaElement;
@@ -79,7 +83,7 @@ public class HDFSParquetFileReader extends AbstractHDFSFileReader {
     @Override
     public Object doRead() throws IOException {
 
-        Group data = this.dataFileReader.read();
+        final Group data = this.dataFileReader.read();
         if (data!=null) {
             return read( data, this.projectedFields);
         }
@@ -94,20 +98,20 @@ public class HDFSParquetFileReader extends AbstractHDFSFileReader {
         }
     }
 
-    private static Object read( Group datum, List<CustomWrapperFieldExpression> projectedFields) throws IOException {
+    private static Object read( final Group datum, final List<CustomWrapperFieldExpression> projectedFields) throws IOException {
 
 
 
-        List<Type> fields = datum.getType().getFields();
-        Object[] vdpRecord = new Object[fields.size()];
+        final List<Type> fields = datum.getType().getFields();
+        final Object[] vdpRecord = new Object[fields.size()];
 
         int i= 0;
-        for (CustomWrapperFieldExpression fieldExpression : projectedFields) {
+        for (final CustomWrapperFieldExpression fieldExpression : projectedFields) {
 
-            for(Type field:  fields){
+            for(final Type field:  fields){
                 if(field.getName().equals(fieldExpression.getName())){
                     if(field.isPrimitive()){
-                        PrimitiveTypeName   primitiveTypeName = field.asPrimitiveType().getPrimitiveTypeName();
+                        final PrimitiveTypeName   primitiveTypeName = field.asPrimitiveType().getPrimitiveTypeName();
                         //We only manage primitiveTypes(BINARY,BOOLEAN; DOUBLE, FLOAT, INT32, INT64, INT96, FIXED_LEN_BYTE_ARRAY)
                         //If it were necessary to manage other type to differentiate among the originalTypes(DATE, MAP....), an ad hoc development would be required 
 
@@ -137,7 +141,17 @@ public class HDFSParquetFileReader extends AbstractHDFSFileReader {
                                 vdpRecord[i] = datum.getFloat(i, 0);
 
                             }else if(primitiveTypeName.equals(PrimitiveTypeName.INT32)) {
-                                vdpRecord[i] = datum.getInteger(i, 0);
+                                if (OriginalType.DECIMAL.equals(field.getOriginalType())) {
+                                    final int scale = field.asPrimitiveType().getDecimalMetadata().getScale();
+                                    vdpRecord[i] = new BigDecimal(BigInteger.valueOf(datum.getInteger(i, 0)), scale);
+                                } else if (OriginalType.DATE.equals(field.getOriginalType())) {
+                                    //   DATE fields really holds the number of days since 1970-01-01
+                                    final int days = datum.getInteger(i,0);
+                                    final long daysMillis = TimeUnit.DAYS.toMillis(days); 
+                                    vdpRecord[i] = new Date(daysMillis);
+                                } else {
+                                    vdpRecord[i] = datum.getInteger(i, 0);
+                                }
 
                             }else if(primitiveTypeName.equals(PrimitiveTypeName.INT64)) {
                                 //we dont differentiate INT64 from TIMESTAMP_MILLIS original types
@@ -153,7 +167,7 @@ public class HDFSParquetFileReader extends AbstractHDFSFileReader {
                                 logger.error("Type of the field "+ field.toString()+", does not supported by the custom wrapper ");
                                 throw new IOException("Type of the field "+ field.toString()+", does not supported by the custom wrapper ");
                             }
-                        }catch(RuntimeException e){
+                        }catch(final RuntimeException e){
                             logger.warn("It was a error reading data", e);
                         }
                         i++;
